--- a/skola (3).html
+++ b/skola (3).html
@@ -81,10 +81,10 @@ table, th, td {
     <h1> satura rādītājs</h1>
     <nav>
     <ol>
-      <li><a href="#">Vēsture</a></li>
-      <li><a href="#">Skolas nosaukums</a></li>
-      <li><a href="#">Zināmie skolas vadītāji(1229-1804)</a></li>
-      <li><a href="#">skolas absolventi</a></li>
+      <li><a href="Vēsture">Vēsture</a></li>
+      <li><a href="Skolas nosaukums">Skolas nosaukums</a></li>
+      <li><a href="Zināmie skolas vadītāji(1229-1804)">Zināmie skolas vadītāji(1229-1804)</a></li>
+      <li><a href="skolas absolventi">skolas absolventi</a></li>
     </ol>
   </nav>
   </section>
@@ -186,8 +186,9 @@ Skolas pastāvēšanai iespējams izsekot līdz pat 1211. gadam, kad bīskaps Al
             <li>Valters Frīdenbergs</li>
             <li> Toms Skujiņš</li>
                 <li>Daina Taimiņa</li>
-                <li> Rainis -latviešu dzejnieks, dramaturgs, tulkotājs, žurnālists, domātājs, kultūras darbinieks, politiķis</li>
+                <li><a href="https://enciklopedija.lv/skirklis/55869-Rainis"> Rainis</a> -latviešu dzejnieks, dramaturgs, tulkotājs, žurnālists, domātājs, kultūras darbinieks, politiķis</li>
         </ul>
+        
 
 
 </body>
